# PinkTopaz

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.txt  conanfile.txt  sign_the_app_bundle
cmake/: FindGLM.cmake  FindSDL2_image.cmake
cmake.modules/: README.txt
res/: frag.glsl  text_frag.glsl  text_vert.glsl  untextured_vert.glsl  vert.glsl  vert.glsl.txt  wireframe_cube_frag.glsl  wireframe_cube_vert.glsl
res/vegur/: README.txt
src/: ActiveCamera.hpp  Actor.cpp  Actor.hpp  Application.cpp  Application.hpp  CameraMovementSystem.cpp  Exception.cpp  Exception.hpp  FileUtilities.cpp  FrameTimer.cpp  Library.metal  MemoryMappedFile.cpp  Noise.cpp  Octree.cpp  Profiler.cpp  RenderSystem.cpp  RenderSystem.hpp  RenderableStaticMesh.hpp  Renderer.cpp  Renderer.hpp  RetinaSupport.h  Shader.cpp  Shader.hpp  SimplexNoise.cpp  StaticMesh.cpp  StaticMesh.hpp  TaskDispatcher.cpp  TerrainCursorSystem.cpp  TerrainEditSystem.cpp  TerrainProgressSystem.cpp  TextureArray.cpp  TextureArray.hpp  ThreadPool.cpp  Transform.hpp  Window.cpp  Window.hpp  WorkQueue.cpp  WorkQueue.hpp  World.cpp  World.hpp  (+8 more)
src/BlockDataStore/: BlockDataStore.cpp  BoxedMallocZone.cpp  MallocZone.cpp  ManagedMallocZone.cpp
src/Fonts/: FontTextureAtlas.cpp  FontTextureAtlasBuilder.cpp  FontTextureAtlasPacker.cpp  Glyph.cpp  GlyphRendererOutline.cpp  GlyphRendererRegular.cpp
src/Grid/: ChangeLog.cpp
src/Malloc/: BlockDataStore.cpp  BoxedMallocZone.cpp  MallocZone.cpp  ManagedMallocZone.cpp
src/Noise/: SimplexNoise.cpp
src/Renderer/: FontTextureAtlas.cpp  FontTextureAtlasBuilder.cpp  Glyph.cpp  GlyphRendererOutline.cpp  GlyphRendererRegular.cpp  Shader.cpp  StaticMesh.cpp  StaticMeshLoader.cpp  StaticMeshSerializer.cpp  StaticMeshVao.cpp  String.cpp  StringRenderer.cpp  TextRenderer.cpp  TextureArray.cpp  TextureArrayLoader.cpp  WireframeCube.cpp
src/Renderer/Metal/: BufferMetal.mm  CommandEncoderMetal.mm  FenceMetal.mm  GraphicsDeviceMetal.mm  ShaderMetal.mm  TextureMetal.mm  TextureSamplerMetal.mm
src/Renderer/OpenGL/: BufferOpenGL.cpp  CommandEncoderOpenGL.cpp  CommandQueue.cpp  FenceOpenGL.cpp  GraphicsDeviceOpenGL.cpp  ShaderOpenGL.cpp  StaticMeshVaoOpenGL.cpp  TextureArrayOpenGL.cpp  TextureOpenGL.cpp  TextureSamplerOpenGL.cpp  glUtilities.cpp
src/Terrain/: ChangeLog.cpp  ConcurrentVoxelData.cpp  InitialSunlightPropagationOperation.cpp  MapRegion.cpp  MapRegionStore.cpp  Mesher.cpp  MesherBlocky.cpp  MesherMarchingCubes.cpp  MesherNaiveSurfaceNets.cpp  PersistentVoxelChunks.cpp  SunlightData.cpp  Terrain.cpp  TerrainChunkQueue.cpp  TerrainDrawList.cpp  TerrainJournal.cpp  TerrainMesh.cpp  TerrainMeshGrid.cpp  TerrainMeshQueue.cpp  TerrainMeshes.cpp  TerrainOperationEditPoint.cpp  TerrainProgressTracker.cpp  TerrainRebuildActor.cpp  TransactedVoxelData.cpp  VoxelData.cpp  VoxelDataGenerator.cpp  VoxelDataLoader.cpp  VoxelDataSerializer.cpp  VoxelDataStore.cpp
src/benchmarks/Noise/: SimplexNoiseBenchmarks.cpp
src/include/: AABB.hpp  ActiveCamera.hpp  Application.hpp  AutoreleasePool.hpp  CPUSupportDetector.hpp  CameraMovedEvent.hpp  CameraMovementSystem.hpp  CerealGLM.hpp  Exception.hpp  FileUtilities.hpp  FrameTimer.hpp  FreeTypeException.hpp  Frustum.hpp  KeypressEvent.hpp  MemoryMappedFile.hpp  Morton.hpp  MouseButtonEvent.hpp  MouseMoveEvent.hpp  Noise.hpp  Octree.hpp  Plane.hpp  PosixException.hpp  Preferences.hpp  Profiler.hpp  Ray.hpp  RenderSystem.hpp  RenderableStaticMesh.hpp  RetinaSupport.h  SDLException.hpp  SimplexNoise.hpp  Stopwatch.hpp  TaskDispatcher.hpp  TerrainComponent.hpp  TerrainCursor.hpp  TerrainCursorInvalidatedEvent.hpp  TerrainCursorSystem.hpp  TerrainEditSystem.hpp  TerrainProgressEvent.hpp  TerrainProgressSystem.hpp  ThreadName.hpp  (+11 more)
src/include/BlockDataStore/: BlockDataStore.hpp  BoxedMallocZone.hpp  MallocZone.hpp  ManagedMallocZone.hpp
src/include/Fonts/: FontTextureAtlas.hpp  FontTextureAtlasBuilder.hpp  FontTextureAtlasPacker.hpp  GlyphRenderer.hpp  GlyphRendererOutline.hpp  GlyphRendererRegular.hpp  TextAttributes.hpp
src/include/Grid/: Array3D.hpp  BaseArray3D.hpp  ConcurrentGridMutable.hpp  ConcurrentSparseGrid.hpp  DenseVector.hpp  FrustumRange.hpp  GridAddressable.hpp  GridIndexer.hpp  GridIndexerRange.hpp  GridLRU.hpp  GridPoints.hpp  GridRaycast.hpp  LimitedConcurrentSparseGrid.hpp  RegionMutualExclusionArbitrator.hpp  SparseArray3D.hpp  SparseGrid.hpp  SparseVector.hpp  UnlockedSparseGrid.hpp
src/include/Malloc/: BlockDataStore.hpp  BoxedMallocZone.hpp  MallocBlock.hpp  MallocZone.hpp  ManagedMallocZone.hpp
src/include/Noise/: Noise.hpp  SimplexNoise.hpp
src/include/Renderer/: Buffer.hpp  CommandEncoder.hpp  Fence.hpp  FontTextureAtlas.hpp  FontTextureAtlasBuilder.hpp  Glyph.hpp  GlyphRenderer.hpp  GlyphRendererOutline.hpp  GlyphRendererRegular.hpp  GraphicsDevice.hpp  PackedGlyph.hpp  RenderPassDescriptor.hpp  RendererException.hpp  Shader.hpp  StaticMesh.hpp  StaticMeshLoader.hpp  StaticMeshSerializer.hpp  StaticMeshVao.hpp  String.hpp  StringRenderer.hpp  TerrainVertex.hpp  TextAttributes.hpp  TextRenderer.hpp  Texture.hpp  TextureArray.hpp  TextureArrayLoader.hpp  TextureSampler.hpp  UntexturedVertex.hpp  VertexFormat.hpp
src/include/Terrain/: Array3D.hpp  ChangeLog.hpp  ConcurrentGridMutable.hpp  ConcurrentVoxelData.hpp  GridAddressable.hpp  GridView.hpp  InitialSunlightPropagationOperation.hpp  MapRegion.hpp  MapRegionStore.hpp  Mesher.hpp  MesherBlocky.hpp  MesherMarchingCubes.hpp  MesherNaiveSurfaceNets.hpp  PersistentVoxelChunks.hpp  Terrain.hpp  (+23 more)
src/linux/: GraphicsDeviceFactory.cpp  Profiler.cpp  RetinaSupport.c  ThreadName.cpp  UnitTestDetector.c  VideoRefreshRate.cpp
src/osx/: AutoreleasePool.mm  CPUSupportDetector.cpp  GraphicsDeviceFactory.mm  MemoryMappedFile.cpp  RetinaSupport.m  ThreadName.cpp  UnitTestDetector.m  VideoRefreshRate.cpp
src/test/: Array3DTests.mm  FrustumTests.cpp  FrustumTests.mm  MallocTests.cpp  MortonTests.cpp  MortonTests.mm  PinkTopazTestsMain.cpp
src/windows/: AutoreleasePool.cpp  CPUSupportDetector.cpp  GraphicsDeviceFactory.cpp  Profiler.cpp  Stopwatch.cpp  ThreadName.cpp  UnitTestDetector.c
(+32 files in other folders)
